# FBerliner_Sudoku_Optimization

./: Cargo.toml
cnf_builder/: Cargo.toml
cnf_builder/benches/: sud_0_clues.rs  sudoku_bench.rs
cnf_builder/src/: lib.rs
structure/: Cargo.toml
structure/src/: lib.rs
translation_to_SAT/: Cargo.toml
translation_to_SAT/benches/: sudoku_bench.rs
translation_to_SAT/src/: lib.rs
