[package]
name = "translation_to_SAT"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
varisat = "0.2.2"
structure = {path = "../structure"}
cnf_builder = {path = "../cnf_builder"}
rand = "0.8.4"

[[bench]]
name = "sudoku_bench"
harness = false

[dev-dependencies]
criterion = "0.3"